[package]
authors = [
  "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
  "rerun.io <opensource@rerun.io>",
]
categories = ["gui"]
description = "A tiling layout engine for egui with drag-and-drop and resizing"
edition = "2021"
homepage = "https://github.com/rerun-io/egui_tiles"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = ["egui", "gui", "tile", "dock", "layout"]
license = "MIT OR Apache-2.0"
name = "egui_tiles"
readme = "README.md"
repository = "https://github.com/rerun-io/egui_tiles"
rust-version = "1.72"
version = "0.7.1"

[package.metadata.docs.rs]
all-features = true


[dependencies]
ahash = { version = "0.8.1", default-features = false, features = [
  "no-rng", # we don't need DOS-protection for what we use ahash for
  "std",
] }
egui = { version = "0.26", default-features = false }
itertools = "0.12"
log = { version = "0.4", features = ["std"] }
serde = { version = "1", features = ["derive"], optional = true }


# For the example:
[dev-dependencies]
eframe = { version = "0.26", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
] }
env_logger = "0.10"

[features]
default = ["serde"]
serde = ["dep:serde", "egui/serde"]
